# tonnesfn_experiments

./: .gitignore  CMakeLists.txt  cheatsheet.txt  package.xml
launch/: full.launch  hardware.launch  hardwareTest.launch  hw.launch  hw_lab.launch  hw_optitrack.launch  hw_qualisys.launch  hw_standalone.launch  realtimeSim.launch  rs_camera.launch  sim.launch  sim_test.launch
msg/: DataPoint.msg
src/: dyret_logger.cpp  evoSettings.h  exp1Gui.cpp  exp2Gui.cpp  expFunctions.cpp  expFunctions.h  expGui.cpp  gaitAdaptationController.cpp  gazeboTest.cpp  hardwareTest.cpp  individuals.h  individuals_journal2019.h  mapGui.cpp  mapPredictor.py  robo_cont_utils.h  rosConnection.h  rsTerrainCharacterizer.cpp  sferesExperiments.h  workManagerClient.py  workManagerLogger.py  workManagerServer.py
srv/: LoggerCommand.srv  getMap.srv
world/: fast.world
