<?xml version="1.0"?>
<package>
  <name>tonnesfn_experiments</name>
  <version>0.0.0</version>
  <description>The tonnesfn_experiments package</description>

  <maintainer email="tonnesfn@ifi.uio.no">tonnesfn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dyret_common</build_depend>
  <build_depend>dyret_hardware</build_depend>
  <build_depend>dyret_controller</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>dyret_common</run_depend>

  <export>
  </export>
</package>
